--- a/.github/workflows/net-cicd.yml
+++ b/.github/workflows/net-cicd.yml
@@ -25,7 +25,8 @@ jobs:
           dotnet-version: 6.0
       - run: |
           dotnet restore
-          cd .. && cd MinimalAPIDemo.Test && dotnet restore
+          dotnet restore MinimalAPIDemo.Test/MinimalAPIDemo.Test.csproj
+          dotnet restore MinimalAPIDemo/MinimalAPIDemo.csproj
           dotnet test MinimalAPIDemo.Test
 
   build:
