--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-ConnectionURI=mongodb://root:12teyrtgf@mongo:27017
+ConnectionURI=mongodb://root:12teyrtgf@127.0.0.7:27017
 APP_URI=http://0.0.0.0
