--- a/MinimalAPIDemo/.env
+++ b/MinimalAPIDemo/.env
@@ -1,3 +1,3 @@
 PORT=3000
-ConnectionURI=mongodb://root:12teyrtgf@mongo:27017
+ConnectionURI=mongodb://root:12teyrtgf@localhost:27017
 APP_URI=localhost:3000
